methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:2: error: ':' expected but ',' found.
def move(nbPas, versLavant)
              ^MethodsArgs:14: error: identifier expected but '}' found.
}
^