methods.args.MethodsArgs.scala.code
def move(nbPas, versLavant)
	{
    if (versLavant)
    	{
        avance(nbPas)
      }
    else{
      recule()
    }
  }
